<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AspectraMini</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plot_view_title">plot view</string>
    <string name="camera_view_title">camera view</string>
    <string name="title_activity_view_config">ViewConfigActivity</string>
    <string name="title_activity_analyze">AnalyzeActivity</string>
    <string name="prefdesc">Setting for use in aSpectraMini</string>
    <string name="preftitle">Camera and LiveView Settings</string>
    <string name="lastPositionSummary">lastPositionSummary</string>
    <string name="lastPositionTitle">lastPositionTitle</string>
    <string name="prefcamera">preferebce Camera</string>
    <string name="prefcameratitle">Camer Prefs Title</string>
    <string name="pref_height_start">ExtLine_height_start</string>
    <string name="pref_default_height_start">10</string>
    <string name="pref_height_end">ExtLine_height_end</string>
    <string name="pref_default_height_end">260</string>
    <string name="pref_width_start">ExtLine_width_start</string>
    <string name="pref_default_width_start">10</string>
    <string name="pref_width_end">ExtLine_width_end</string>
    <string name="pref_default_width_end">700</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="menu">MenuString</string>
    <string name="navdrawer_item_live_view">Camera Live View</string>
    <string name="navdrawer_item_view_config">Camera View Config</string>
    <string name="navdrawer_item_analyze">Plot Analyze</string>
    <string name="navdrawer_item_list_view">list of saved plots</string>
    <string name="navdrawer_item_prefs">Settings</string>
    <string name="navdrawer_item_bt_live">Bluetooth Live</string>
    <string name="navdrawer_item_bt_chat">Bluetooth Chat</string>
    <string name="placeholder_lorem_ipsum">Lorrem Ipsum</string>
    <string name="DEFAULT_WIDTH_START">10</string>
    <string name="PREFS_KEY_WIDTH_START">PREFS_KEY_WIDTH_START</string>
    <string name="DEFAULT_WIDTH_END">90</string>
    <string name="PREFS_KEY_WIDTH_END">PREFS_KEY_WIDTH_END</string>
    <string name="DEFAULT_HEIGHT_START">49</string>
    <string name="PREFS_KEY_HEIGHT_START">PREFS_KEY_HEIGHT_START</string>
    <string name="DEFAULT_HEIGHT_END">50</string>
    <string name="PREFS_KEY_HEIGHT_END">PREFS_KEY_HEIGHT_END</string>
    <string name="pref_title_enable_extline_config">Enable Scan area configuration</string>
    <string name="pref_title_width_start">Scan area start width [%]</string>
    <string name="pref_description_extendedline_config">enable ExtLine configuration</string>
    <string name="pref_title_width_end">Scan area width end [%]</string>
    <string name="pref_title_height_start">Scan area height start [%]</string>
    <string name="pref_title_height_end">Scan area height end [%]</string>
    <string name="pref_header_camera">Camera, ScanArea settings</string>
    <string name="title_spectrum_list">spectra</string>
    <string name="title_spectrum_detail">spectrum Detail</string>
    <string name="name_width_start">Scan area width start</string>
    <string name="name_width_end">Scan area width end</string>
    <string name="name_height_start">Scan area height start</string>
    <string name="name_height_end">Height end</string>
    <string name="name_count_of_lines">Amount of summed Y-lines</string>
    <string name="PREFS_KEY_SCAN_AREA_WIDTH">PREFS_KEY_SCAN_LINE_WIDTH</string>
    <string name="DEFAULT_SCAN_AREA_WIDTH">4</string>
    <string name="pref_title_scan_line_width">Height (in Y-lines ) of scanned area</string>
    <string name="PREFS_KEY_ENABLE_NORMALIZE">PREFS_KEY_ENABLE_NORMALIZE</string>
    <string name="pref_title_enable_normalize">enable normalize</string>
    <string name="pref_description_enable_normalize">normalize plot values to max 4096 (12 bits)</string>
    <string name="action_save">Save spectrum</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_analyze">Analyze</string>
    <string name="PREFS_KEY_FOLDER_NAME">PREFS_KEY_FOLDER_NAME</string>
    <string name="pref_title_folder_name">Default folder to save spectra</string>
    <string name="DEFAULT_FOLDER_NAME">aspectra</string>
    <string name="PREFS_KEY_EXTENSION_NAME">PREFS_KEY_EXTENSION_NAME</string>
    <string name="pref_title_extension_name">File extension for spectra files</string>
    <string name="DEFAULT_EXTENSION_NAME">asp</string>
    <string name="action_list">List spectra</string>
    <string name="DEFAULT_KEY_SPECTRA_LENGTH">DEFAULT_KEY_SPECTRA_LENGTH</string>
    <string name="PREFS_KEY_SPECTRA_LENGTH">PREFS_KEY_SPECTRA_LENGTH</string>
    <string name="DEFAULT_KEY_SPECTRA_BASEPATH">DEFAULT_KEY_SPECTRA_BASEPATH</string>
    <string name="PREFS_KEY_SPECTRA_BASEPATH">PREFS_KEY_SPECTRA_BASEPATH</string>
    <string name="DEFAULT_KEY_SPECTRA_EXTENSION">DEFAULT_KEY_SPECTRA_EXTENSION</string>
    <string name="PREFS_KEY_SPECTRA_EXTENSION">PREFS_KEY_SPECTRA_EXTENSION</string>

</resources>
