<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="heigh_start"
        android:title="@string/pref_height_start"
        android:defaultValue="@string/pref_default_height_start"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="heigh_end"
        android:title="@string/pref_height_end"
        android:defaultValue="@string/pref_default_height_end"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="width_start"
        android:title="@string/pref_width_start"
        android:defaultValue="@string/pref_default_width_start"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="width_end"
        android:title="@string/pref_width_end"
        android:defaultValue="@string/pref_default_width_end"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:maxLines="1" />

</PreferenceScreen>
